[gd_scene load_steps=4 format=3 uid="uid://b8dad0e1f2g3h"]

[ext_resource type="Script" path="res://scripts/inventory_screen.gd" id="1_inv"]
[ext_resource type="Texture2D" uid="uid://d4157g4lmu71x" path="res://assets/ui/options8.png" id="2_coin"]
[ext_resource type="FontFile" uid="uid://r0maixtbrsdt" path="res://fonts/Sniglet Regular.ttf" id="3_font"]

[node name="InventoryScreen" type="CanvasLayer"]
script = ExtResource("1_inv")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "ðŸŽ’ Inventory"
horizontal_alignment = 1

[node name="TopBar" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CoinDisplay" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CoinIcon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/TopBar/CoinDisplay"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("2_coin")
expand_mode = 1
stretch_mode = 5

[node name="CoinLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TopBar/CoinDisplay"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 18
text = "100"
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 16

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 18
text = "Close (Press I)"
